Changelog for 1.5 Series
Forthcoming

API Enhancements:
* Moved a great deal of code into PGObject framework on CPAN (Chris T)

Changelog for 1.4 Series
Released 2014-09-15

Changelog for 1.4.5
* Fixed bug 1245, print and email buttons lost after email invoice (Chris T)

Chris T is Chris Travers

Changelog for 1.4.4
* Fixed bug 1225 error saving order/quote for natural persons (Chris T)
* Fixed bug 1235, natural persons' orders not on report (Chris T)
* Fixed bug, insufficient perms on account_checkpoint_id_seq (Chris T)
* Fixed bug 1238, web services do not run on starman (Chris T)
* Fixed bug 1233, insufficient error handling with templates (Chris T)
* Added Product Receipt templates for printing vendor invoices (Chris T)
* (Bug Report 1229), added ID card and birthdate tracking (Chris T)
* Fixed bug 1234, trying to save user before employee thows error (Chris T)
* Fixed bug 1239, reopening on previous close throws error (Chris T)
* Fixed upgrade bug, referential errors upgrading 1.2 data (Chris T)
* Fixed bug 1243, dd.mm.yyyy formats don't work (Chris T)
* Quieted some test cases (Chris T)

Chris T is Chris Travers

Changelog for 1.4.3
* Added sanity check for psql availability (Bug 1226, Chris T)
* Added db fix for older eca's missing currencies (Bug 1228, Chris T)
* Fixed bug 1230, pricematrix for vendors not respected (Chris T)
* Updated installation instructions with more Apache info (Bill A)
* Improvements in testing LedgerSMB::Sysconfig (bug 1232, Chris T)
* Fixing sales tax rounding precision (bug via email, Chris T)
* Added Starman/Plack support (Chris T)
* Fixed duplicate user handling in setup.pl (Chris T)
* renamed 'Post as Saved' to 'Post', 'Save as Shown' to 'Save Draft' (Chris T)

Bill A is Bill Appelbe
Chris T is Chris Travers

Changelog for 1.4.2
* Separated address classes for employees out (bug 817, Chris T)
* Fixed dojo issue with user address screen (Chris T)
* Fixed bug 1219, log message of warning trial_balance/search.css (Chris T)